--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,18 @@
             <version>${flink.version}</version>
         </dependency>
 
+        <!--  kafka      -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-base</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-kafka</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
 
     </dependencies>
 
